# econ-viz-docs

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
analysis/: index.html
animation/: index.html
canvas/: index.html
changelog/: index.html
cli/: index.html
consumer/: index.html
docs/: analysis.md  animation.md  canvas.md  changelog.md  cli.md  consumer.md  export.md  index.md  installation.md  interactive.md  latex.md  quickstart.md  themes.md
docs/models/: advanced.md  ces.md  cobb-douglas.md  index.md  leontief.md  perfect-substitutes.md  quasi-linear.md  satiation.md  stone-geary.md  translog.md
docs/stylesheets/: extra.css
export/: index.html
installation/: index.html
interactive/: index.html
latex/: index.html
models/: index.html
models/advanced/: index.html
models/ces/: index.html
models/cobb-douglas/: index.html
models/leontief/: index.html
models/perfect-substitutes/: index.html
models/quasi-linear/: index.html
models/satiation/: index.html
models/stone-geary/: index.html
models/translog/: index.html
overrides/partials/: comments.html
quickstart/: index.html
search/: search_index.json
site/: 404.html  CNAME  index.html  sitemap.xml
site/canvas/: index.html
site/cli/: index.html
site/export/: index.html
site/installation/: index.html
site/javascripts/: katex.js
site/latex/: index.html
site/models/: index.html
site/quickstart/: index.html
site/search/: search_index.json
stylesheets/: extra.css
themes/: index.html
(+11 files in other folders)
