[tool.poetry]
name = "econ-viz-docs"
version = "0.1.0"
description = "Documentation for econ-viz"
authors = ["Anthony Sung"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6"
mkdocs-material = "^9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
